--- a/public/style.css
+++ b/public/style.css
@@ -41,9 +41,9 @@ input {
 
   .result{
     margin: 30px auto;
-    padding-top: 25px;
-    width:250px;
-    height: 50px;
+    padding: 35px 50px 0;
+    width:500px;
+    height: 70px;
     border-radius: 2rem;
     border: 4px solid #00adb5;
   }
